更新英文版顯示 font-size
英文版 ul.area_list 添加 class="for_en_fsize"

--- a/jetfi_wifi/index_en.html
+++ b/jetfi_wifi/index_en.html
@@ -78,88 +78,60 @@
 			    	<div class="swiper-pagination"></div>
 			  	</div>
 	        </section>
-			<section class="area_content">
-				<h3 class="top_title">WiFi網路分享器租借</h3>
-				<!-- 英文版 area_list 這 ul 需添加 for_en_fsize -->
-			   	<ul class="area_list for_en_fsize clearfix">
-			   		<li>
-			   			<a href="#" style="background-image: url(images/A1-Japan.jpg);">
-				   			<div class="area_info">
-				   				<h3 class="area_title">日本上網</h3>
-					   			<h4 class="area_sub_title">4G吃到飽</h4>
-					   			<p class="more">了解更多</p>
-					   		</div>
-				   		</a>
-			   		</li>
-			   		<li>
-			   			<a href="#" style="background-image: url(images/A2-Korea.jpg);">
-				   			<div class="area_info">
-				   				<h3 class="area_title">韓國上網</h3>
-					   			<h4 class="area_sub_title">4G吃到飽</h4>
-					   			<p class="more">了解更多</p>
-					   		</div>
-				   		</a>
-			   		</li>
-			   		<li>
-			   			<a href="#" style="background-image: url(images/A3-China.jpg);">
-				   			<div class="area_info">
-				   				<h3 class="area_title">中港澳上網</h3>
-					   			<h4 class="area_sub_title">直接使用LINE、FB</h4>
-					   			<p class="more">了解更多</p>
-					   		</div>
-				   		</a>
-			   		</li>
+			<section class="area_content for_en_fsize">
+				<h3 class="top_title">Pocket Wi-Fi Rental</h3>
+			   	<ul class="area_list clearfix">
 			   		<li>
 			   			<a href="#" style="background-image: url(images/A4-Asia.jpg);">
 				   			<div class="area_info">
-				   				<h3 class="area_title">亞洲上網</h3>
-				   				<h4 class="area_sub_title">多國不限流量</h4>
-				   				<p class="more">了解更多</p>
+				   				<h3 class="area_title">Internet access in Asia</h3>
+				   				<h4 class="area_sub_title">Multi-country unlimited traffic</h4>
+				   				<p class="more">Understand More</p>
 				   			</div>
 				   		</a>
 			   		</li>
 			   		<li>
 			   			<a href="#" style="background-image: url(images/A5-Europe.jpg);">
 				   			<div class="area_info">
-				   				<h3 class="area_title">歐洲上網</h3>
-					   			<h4 class="area_sub_title">多國不限流量</h4>
-					   			<p class="more">了解更多</p>
+				   				<h3 class="area_title">Internet access in Europe</h3>
+					   			<h4 class="area_sub_title">Multi-country unlimited traffic</h4>
+					   			<p class="more">Understand More</p>
 					   		</div>
 				   		</a>
 			   		</li>
 			   		<li>
 			   			<a href="#" style="background-image: url(images/A6-Ameaica.jpg);">
 			   				<div class="area_info">
-					   			<h3 class="area_title">美洲上網</h3>
-					   			<h4 class="area_sub_title">多國不限流量</h4>
-					   			<p class="more">了解更多</p>
+					   			<h3 class="area_title">Internet access in America</h3>
+					   			<h4 class="area_sub_title">Multi-country unlimited traffic</h4>
+					   			<p class="more">Understand More</p>
 					   		</div>
 				   		</a>
 			   		</li>
 			   		<li>
 			   			<a href="#" style="background-image: url(images/A7-Africa.jpg);">
 				   			<div class="area_info">
-				   				<h3 class="area_title">非洲上網</h3>
-				   				<h4 class="area_sub_title">多國不限流量</h4>
-				   				<p class="more">了解更多</p>
+				   				<h3 class="area_title">Internet access in Africa</h3>
+				   				<h4 class="area_sub_title">Multi-country unlimited traffic</h4>
+				   				<p class="more">Understand More</p>
 				   			</div>
 				   		</a>
 			   		</li>
-			   		<!-- <li>
+			   		<li>
 			   			<a href="#" style="background-image: url(images/A8-Oceania.jpg);">
 				   			<div class="area_info">
-				   				<h3 class="area_title">大洋洲上網</h3>
-					   			<h4 class="area_sub_title">4G吃到飽</h4>
-					   			<p class="more">了解更多</p>
+				   				<h3 class="area_title">Internet access in Oceania</h3>
+					   			<h4 class="area_sub_title">Unlimited Internet traffic in Australia and New Zealand</h4>
+					   			<p class="more">Understand More</p>
 					   		</div>
 				   		</a>
-			   		</li> -->
+			   		</li>
 			   		<li>
 			   			<a href="#" style="background-image: url(images/img_default.jpg);">
 				   			<div class="area_info">
-				   				<h3 class="area_title">大洋洲上網</h3>
-					   			<h4 class="area_sub_title">4G吃到飽</h4>
-					   			<p class="more">了解更多</p>
+				   				<h3 class="area_title">全球上網</h3>
+					   			<h4 class="area_sub_title"></h4>
+					   			<p class="more">Understand More</p>
 					   		</div>
 				   		</a>
 			   		</li>
