--- a/Richtek2/index.html
+++ b/Richtek2/index.html
@@ -5,6 +5,9 @@
 		<title>特約商店享好康</title>
 		<meta name='description' content=""/>
 		<meta name='keywords' content=""/>
+		<meta name="MobileOptimized" content="width">
+		<meta name="HandheldFriendly" content="true">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="css/style.css">
 		<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
 
@@ -76,13 +79,13 @@
 				</div>
 				<ul class="other_link">
 					<li>
-						<a href="https://www.mayohr.com/" target="_blank"><img src="images/logo_stayfun.jpg" alt="STAYFUN 員工福利整合平台" width="100"></a>
+						<a class="link_01" href="https://www.mayohr.com/" target="_blank"><img src="images/logo_stayfun.jpg" alt="STAYFUN 員工福利整合平台"></a>
 					</li>
 					<li>
-						<a href="#" target="_blank"><img src="images/logo_MTK.png" alt="聯發科" width="70"></a>
+						<a class="link_02" href="#" target="_blank"><img src="images/logo_MTK.png" alt="聯發科"></a>
 					</li>
 					<li>
-						<a href="http://www.tyht-service.com.tw/" target="_blank"><img src="images/logo_tyht.png" alt="台元科技園區管理服務中心" width="300"></a>
+						<a class="link_03" href="http://www.tyht-service.com.tw/" target="_blank"><img src="images/logo_tyht.png" alt="台元科技園區管理服務中心"></a>
 					</li>
 				</ul>
 			</section>
