--- a/Richtek2/index.html
+++ b/Richtek2/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-tw">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="zh-Hant">
 	<head>
 		<meta charset="UTF-8">
 		<title>特約商店享好康</title>
@@ -7,10 +7,9 @@
 		<meta name='keywords' content=""/>
 		<meta name="MobileOptimized" content="width">
 		<meta name="HandheldFriendly" content="true">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<link rel="stylesheet" href="css/style.css">
-		<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
-
+		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 	</head>
 	<body>
 		<header class="headerBox">
