細節調整和新增容量說明與介紹

--- a/jetfi_wifi_jp/index.html
+++ b/jetfi_wifi_jp/index.html
@@ -15,23 +15,20 @@
 		<script type="text/javascript" src="https://www.jetfi.jp/wifi/js/common.js"></script>
 
 		<link rel="icon" href="https://www.jetfi.jp/wifi/images/favicon.ico">
-		<link rel="apple-touch-icon" href="/wifi/images/apple-touch-icon.png">
+		<link rel="apple-touch-icon" href="https://www.jetfi.jp/wifi/images/apple-touch-icon.png">
 		<link rel="stylesheet" href="https://www.jetfi.jp/wifi/css/normalize.min.css">
 		<link rel="stylesheet" href="https://www.jetfi.jp/wifi/css/font.min?20190613.css">
 		<link rel="stylesheet" href="https://www.jetfi.jp/wifi/css/font-awesome.min.css">
 		<link rel="stylesheet" href="https://www.jetfi.jp/wifi/css/basic_frame.min.css">
 		<link rel="stylesheet" type="text/css" href="https://www.jetfi.jp/wifi/css/common.css" media="all">
-		<link rel="stylesheet" type="text/css" href="/wifi/css/top_new.css?20200310" media="all">
+		<link rel="stylesheet" type="text/css" href="https://www.jetfi.jp/wifi/css/top_new.css?20200310" media="all">
 		<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:300,400,500,700,900" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,700i" rel="stylesheet">
-
-		<link rel="stylesheet" href="css/swiper.css">
-		<script src="js/swiper.js"></script>    
+		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,700i" rel="stylesheet"> 
 		    
 		<!--slick-->
-		<script src="/wifi/slick/slick.min.js?201702"></script>
-		<script type="text/javascript" src="/wifi/js/jquery.matchHeight-min.js"></script>
-		<script type="text/javascript" src="/wifi/js/html_include.js"></script>
+		<script src="https://www.jetfi.jp/wifi/slick/slick.min.js?201702"></script>
+		<script type="text/javascript" src="https://www.jetfi.jp/wifi/js/jquery.matchHeight-min.js"></script>
+		<script type="text/javascript" src="https://www.jetfi.jp/wifi/js/html_include.js"></script>
 		<script>
 		    $(function(){
 		      $('.js-matchHeight').matchHeight();
