--- a/jetfi_wifi_jp/asia.html
+++ b/jetfi_wifi_jp/asia.html
@@ -15,27 +15,31 @@
 		<script type="text/javascript" src="https://www.jetfi.jp/wifi/js/common.js"></script>
 
 		<link rel="icon" href="https://www.jetfi.jp/wifi/images/favicon.ico">
-		<link rel="apple-touch-icon" href="/wifi/images/apple-touch-icon.png">
+		<link rel="apple-touch-icon" href="https://www.jetfi.jp/wifi/images/apple-touch-icon.png">
 		<link rel="stylesheet" href="https://www.jetfi.jp/wifi/css/normalize.min.css">
-		<link rel="stylesheet" href="https://www.jetfi.jp/wifi/css/font.min?20190613.css">
+		<link rel="stylesheet" href="https://www.jetfi.jp/wifi/css/font.min.css">
 		<link rel="stylesheet" href="https://www.jetfi.jp/wifi/css/font-awesome.min.css">
 		<link rel="stylesheet" href="https://www.jetfi.jp/wifi/css/basic_frame.min.css">
 		<link rel="stylesheet" type="text/css" href="https://www.jetfi.jp/wifi/css/common.css" media="all">
-		<link rel="stylesheet" type="text/css" href="/wifi/css/top_new.css?20200310" media="all">
+		<link rel="stylesheet" type="text/css" href="https://www.jetfi.jp/wifi/css/top_new.css?20200310" media="all">
 		<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:300,400,500,700,900" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,700i" rel="stylesheet">
-
-		<link rel="stylesheet" href="css/swiper.css">
-		<script src="js/swiper.js"></script>    
+		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,700i" rel="stylesheet"> 
 		    
 		<!--slick-->
-		<script src="/wifi/slick/slick.min.js?201702"></script>
-		<script type="text/javascript" src="/wifi/js/jquery.matchHeight-min.js"></script>
-		<script type="text/javascript" src="/wifi/js/html_include.js"></script>
+		<script src="https://www.jetfi.jp/wifi/slick/slick.min.js?201702"></script>
+		<script type="text/javascript" src="https://www.jetfi.jp/wifi/js/jquery.matchHeight-min.js"></script>
+		<script type="text/javascript" src="https://www.jetfi.jp/wifi/js/html_include.js"></script>
 		<script>
 		    $(function(){
 		      $('.js-matchHeight').matchHeight();
 		    });
+		</script>
+		<script>
+			$(function(){
+			  $(".show_more_info h4").click(function(){
+			    $(this).next(".mob_show").fadeToggle();
+			  });
+			});
 		</script>
 	</head>
 	<body>
@@ -44,7 +48,7 @@
 			<div id="fix-Header">
 			  <div class="head-inner">
 			    <nav id="gNav" class="Nav" role="navigation" aria-label="メインメニュー">
-			      <div class="logo-area-fix"> <a href="/wifi/" class="gnav-logo"><img src="/wifi/images/logo_jetfisite.svg" alt="高速、大容量、これ一台で！全世界で使える海外Wi-Fi jetfi by GFC"></a>
+			      <div class="logo-area-fix"> <a href="/wifi/" class="gnav-logo"><img src="https://www.jetfi.jp/wifi/images/logo_jetfisite.svg" alt="高速、大容量、これ一台で！全世界で使える海外Wi-Fi jetfi by GFC"></a>
 			        <p class="tagline">高速、大容量、これ一台で！<br>
 			          全世界で使える海外Wi-Fi</p>
 			      </div>
@@ -156,17 +160,18 @@
 					<div class="plan_info">
 						<p style="background: url(images/svg/recommendation_star.svg) center left no-repeat; background-size: contain; padding-left: 30px; margin-bottom: 5px;">オススメ</p>
 						<div style="border-bottom: 1.8px solid #6091CD; margin-bottom: 10px; background: url(images/bg_img_aircraft.png) center right no-repeat; background-size: contain;">
-
 							<h4 style="font-size: 23px; font-weight: 600;">“ヨーロッパ周遊”プラン</h4>
 							<p style="font-size: 17px; color: #FF0000; font-weight: 600; padding: 5px 0;">最安680円/日〜</p>
 						</div>
 						<p style="font-size: 15px; font-weight: 500;">ヨーロッパエリア内なら1か国でも複数国でも、同一料金でご利用いただけるプランです。ヨーロッパ内で複数国移動する場合に便利！</p>
 						<p class="btn" style="padding: 20px;">
-							<a href="#" style="background-color: #FFC924; color: #222; font-weight: 600; font-size: 18px; text-align: center; display: block; border-radius: 50px; padding:16px 10px; box-shadow: 3px 3px 0 #808080;">“ヨーロッパ周遊”プランの申し込みはこちら</a>
+							<a href="asia_01.html" style="background-color: #FFC924; color: #222; font-weight: 600; font-size: 18px; text-align: center; display: block; border-radius: 50px; padding:16px 10px; box-shadow: 3px 3px 0 #808080;">“ヨーロッパ周遊”プランの申し込みはこちら</a>
 						</p>
-						<div>
-							<h4 style="font-size: 16px; font-weight: 600;border-bottom: 1.8px solid #6091CD; padding: 5px 0; margin-top: 10px;">◆ 対応国一覧</h4>
-							<p style="font-size: 13px;">イギリス、アイルランド、フランス、モナコ、ドイツ、スイス、リヒテンシュタイン、オーストリア、オランダ、ベルギー、ルクセンブルク、デンマーク、ノルウェー、スウェーデン、フィンランド、オーランド諸島、アイスランド、スペイン、ポルトガル、イタリア、バチカン、サンマリノ、チェコ、ハンガリー、ギリシャ、トルコ、ロシア、ポーランド、クロアチア、アルバニア、ブルガリア、キプロス、エストニア、リトアニア、ラトビア、マルタ共和国、ルーマニア、セルビア、スロベニア、スロバキア、ウクライナ</p>
+						<div class="show_more_info">
+							<h4>対応国一覧</h4>
+							<div class="mob_show">
+								<p>イギリス、アイルランド、フランス、モナコ、ドイツ、スイス、リヒテンシュタイン、オーストリア、オランダ、ベルギー、ルクセンブルク、デンマーク、ノルウェー、スウェーデン、フィンランド、オーランド諸島、アイスランド、スペイン、ポルトガル、イタリア、バチカン、サンマリノ、チェコ、ハンガリー、ギリシャ、トルコ、ロシア、ポーランド、クロアチア、アルバニア、ブルガリア、キプロス、エストニア、リトアニア、ラトビア、マルタ共和国、ルーマニア、セルビア、スロベニア、スロバキア、ウクライナ</p>
+							</div>
 						</div>
 					</div>
 					<div class="area_photo clearfix">
@@ -186,10 +191,14 @@
 			   	<ul class="area_list clearfix">
 			   		<li>
 			   			<a href="asia.html">
-			   				<div class="area_photo" style="background-image: url(images/area-photo/china.jpg);"></div>
+			   				<div class="area_photo" style="background-image: url(images/area-photo/china.jpg);">
+			   					<div class="labels clearfix">
+			   						<p class="star img_default">オススメ</p>
+			   					</div>
+			   				</div>
 				   			<div class="area_info">
 				   				<h3 class="area_title">
-				   					<span>“中国”プラン</span>
+				   					<span>“中国”<span class="f_s">プラン</span></span>
 				   				</h3>
 					   			<h4 class="area_sub_title">最安680円/日〜</h4>
 					   		</div>
@@ -197,10 +206,14 @@
 			   		</li>
 			   		<li>
 			   			<a href="#">
-			   				<div class="area_photo" style="background-image: url(images/area-photo/korea.jpg);"></div>
+			   				<div class="area_photo" style="background-image: url(images/area-photo/korea.jpg);">
+			   					<div class="labels clearfix">
+			   						<p class="hot">人気国</p>
+			   					</div>
+			   				</div>
 				   			<div class="area_info">
 				   				<h3 class="area_title">
-				   					<span>“韓国”プラン</span>
+				   					<span>“韓国”<span class="f_s">プラン</span></span>
 				   				</h3>
 					   			<h4 class="area_sub_title">最安680円/日〜</h4>
 					   		</div>
@@ -208,10 +221,15 @@
 			   		</li>
 			   		<li>
 			   			<a href="#">
-			   				<div class="area_photo" style="background-image: url(images/area-photo/taiwan.jpg);"></div>
+			   				<div class="area_photo" style="background-image: url(images/area-photo/taiwan.jpg);">
+			   					<div class="labels clearfix">
+			   						<p class="star img_default">オススメ</p>
+			   						<p class="hot">人気国</p>
+			   					</div>
+			   				</div>
 				   			<div class="area_info">
 				   				<h3 class="area_title">
-				   					<span>“台湾”プラン</span>
+				   					<span>“台湾”<span class="f_s">プラン</span></span>
 				   				</h3>
 					   			<h4 class="area_sub_title">最安680円/日〜</h4>
 					   		</div>
@@ -222,7 +240,7 @@
 			   				<div class="area_photo" style="background-image: url(images/area-photo/hong_kong.jpg);"></div>
 				   			<div class="area_info">
 				   				<h3 class="area_title">
-				   					<span>“香港”プラン</span>
+				   					<span>“香港”<span class="f_s">プラン</span></span>
 				   				</h3>
 					   			<h4 class="area_sub_title">最安680円/日〜</h4>
 					   		</div>
@@ -233,7 +251,7 @@
 			   				<div class="area_photo" style="background-image: url(images/area-photo/thailand.jpg);"></div>
 				   			<div class="area_info">
 				   				<h3 class="area_title">
-				   					<span>“タイ”プラン</span>
+				   					<span>“タイ”<span class="f_s">プラン</span></span>
 				   				</h3>
 					   			<h4 class="area_sub_title">最安680円/日〜</h4>
 					   		</div>
@@ -244,7 +262,7 @@
 			   				<div class="area_photo" style="background-image: url(images/area-photo/singapore.jpg);"></div>
 				   			<div class="area_info">
 				   				<h3 class="area_title">
-				   					<span>“シンガポール”プラン</span>
+				   					<span>“シンガポール”<span class="f_s">プラン</span></span>
 				   				</h3>
 					   			<h4 class="area_sub_title">最安680円/日〜</h4>
 					   		</div>
@@ -255,7 +273,7 @@
 			   				<div class="area_photo" style="background-image: url(images/area-photo/malaysia.jpg);"></div>
 				   			<div class="area_info">
 				   				<h3 class="area_title">
-				   					<span>“マレーシア”プラン</span>
+				   					<span>“マレーシア”<span class="f_s">プラン</span></span>
 				   				</h3>
 					   			<h4 class="area_sub_title">最安680円/日〜</h4>
 					   		</div>
@@ -266,7 +284,7 @@
 			   				<div class="area_photo" style="background-image: url(images/area-photo/philippines.jpg);"></div>
 				   			<div class="area_info">
 				   				<h3 class="area_title">
-				   					<span>“フィリピン”プラン</span>
+				   					<span>“フィリピン”<span class="f_s">プラン</span></span>
 				   				</h3>
 					   			<h4 class="area_sub_title">最安680円/日〜</h4>
 					   		</div>
@@ -277,7 +295,7 @@
 			   				<div class="area_photo" style="background-image: url(images/area-photo/macau.jpg);"></div>
 				   			<div class="area_info">
 				   				<h3 class="area_title">
-				   					<span>“マカオ”プラン</span>
+				   					<span>“マカオ”<span class="f_s">プラン</span></span>
 				   				</h3>
 					   			<h4 class="area_sub_title">最安680円/日〜</h4>
 					   		</div>
@@ -288,7 +306,7 @@
 			   				<div class="area_photo" style="background-image: url(images/area-photo/cambodia.jpg);"></div>
 				   			<div class="area_info">
 				   				<h3 class="area_title">
-				   					<span>“カンボジア”プラン</span>
+				   					<span>“カンボジア”<span class="f_s">プラン</span></span>
 				   				</h3>
 					   			<h4 class="area_sub_title">最安680円/日〜</h4>
 					   		</div>
@@ -299,7 +317,7 @@
 			   				<div class="area_photo" style="background-image: url(images/area-photo/asia.png);"></div>
 				   			<div class="area_info">
 				   				<h3 class="area_title">
-				   					<span>“ベトナム”プラン</span>
+				   					<span>“ベトナム”<span class="f_s">プラン</span></span>
 				   				</h3>
 					   			<h4 class="area_sub_title">最安680円/日〜</h4>
 					   		</div>
@@ -310,7 +328,7 @@
 			   				<div class="area_photo" style="background-image: url(images/area-photo/india.jpg);"></div>
 				   			<div class="area_info">
 				   				<h3 class="area_title">
-				   					<span>“インド”プラン</span>
+				   					<span>“インド”<span class="f_s">プラン</span></span>
 				   				</h3>
 					   			<h4 class="area_sub_title">最安680円/日〜</h4>
 					   		</div>
