容量無制限

--- a/jetfi_wifi_jp/asia.html
+++ b/jetfi_wifi_jp/asia.html
@@ -190,7 +190,7 @@
 				</div>
 			   	<ul class="area_list clearfix">
 			   		<li>
-			   			<a href="asia.html">
+			   			<a href="asia_02.html">
 			   				<div class="area_photo" style="background-image: url(images/area-photo/china.jpg);">
 			   					<div class="labels clearfix">
 			   						<p class="star img_default">オススメ</p>
