--- a/jetfi_wifi_jp/index.html
+++ b/jetfi_wifi_jp/index.html
@@ -171,7 +171,7 @@
 				   		</a>
 			   		</li>
 			   		<li>
-			   			<a href="#">
+			   			<a href="europe.html">
 			   				<div class="area_photo" style="background-image: url(images/area-photo/europe.png);"></div>
 				   			<div class="area_info">
 				   				<h3 class="area_title">
