新增標籤hot 和 中國 vpn

--- a/jetfi_wifi_jp/asia.html
+++ b/jetfi_wifi_jp/asia.html
@@ -44,7 +44,10 @@
 				</div>
 				<div class="travel_plan_content clearfix">
 					<div class="plan_info">
-						<p style="background: url(images/svg/recommendation_star.svg) center left no-repeat; background-size: contain; padding-left: 30px; margin-bottom: 5px;">オススメ</p>
+						<div class="clearfix" style="text-align: left;">
+							<p style="background: url(images/svg/recommendation_star.svg) center left no-repeat; display: inline-block; background-size: contain; margin-right: 5px; padding-left: 30px; margin-bottom: 5px;">オススメ</p>
+							<p style="background-color: #C90410; padding: 0px 15px; line-height: 22px; display: inline-block; color: #fff; font-weight: 400; font-size: 14px; margin-bottom: 3px;">人気国</p>
+						</div>
 						<div style="border-bottom: 1.8px solid #6091CD; margin-bottom: 10px; background: url(images/bg_img_aircraft.png) center right no-repeat; background-size: contain;">
 							<h4 style="font-size: 23px; font-weight: 600;">“ヨーロッパ周遊”プラン</h4>
 							<p style="font-size: 17px; color: #FF0000; font-weight: 600; padding: 5px 0;">最安680円/日〜</p>
@@ -75,6 +78,21 @@
 					</p>
 				</div>
 			   	<ul class="area_list clearfix">
+			   		<li>
+			   			<a href="asia_00.html">
+			   				<div class="area_photo" style="background-image: url(images/area-photo/oceania.png);">
+			   					<div class="labels clearfix">
+			   						<p class="star img_default">オススメ</p>
+			   					</div>
+			   				</div>
+				   			<div class="area_info">
+				   				<h3 class="area_title">
+				   					<span>“Japan Internet”<span class="f_s">プラン</span></span>
+				   				</h3>
+					   			<h4 class="area_sub_title">最安680円/日〜</h4>
+					   		</div>
+				   		</a>
+			   		</li>
 			   		<li>
 			   			<a href="asia_02.html">
 			   				<div class="area_photo" style="background-image: url(images/area-photo/china.jpg);">
