--- a/jetfi_wifi_jp/asia_02.html
+++ b/jetfi_wifi_jp/asia_02.html
@@ -67,7 +67,9 @@
 				<ul class="capacity_content">
 					<li class="main_unlimited">
 						<a href="#">
-							<p class="star"><span class="img_default">オススメ</span></p>
+							<div class="labels clearfix">
+								<p class="star img_default">オススメ</p>
+							</div>
 							<p class="capacity_img capacity_00 img_default">
 								容量を気にせず<br>
 								たっぷり使いたい
@@ -93,7 +95,9 @@
 					</li>
 					<li>
 						<a href="#">
-							<p class="star"><span class="img_default">オススメ</span></p>
+							<div class="labels clearfix">
+								<p class="star img_default">オススメ</p>
+							</div>
 							<p class="capacity_img capacity_02 img_default">
 								たっぷりお得に利用したい
 								<span>“ 500MB ”</span>
