--- a/jetfi_wifi_jp/asia_03.html
+++ b/jetfi_wifi_jp/asia_03.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-TW">
 	<head>
 		<meta charset="UTF-8">
-		<title>“　アジア周遊　”プラン - 高速&大容量の格安海外WiFiレンタルは【jetfi】</title>
+		<title>“　中国通常　”プラン - 高速&大容量の格安海外WiFiレンタルは【jetfi】</title>
 		<meta name="description" content="格安、高速、大容量の海外Wi-Fiといえばjetfi。大型バッテリー内蔵の海外Wi-Fiはjetfiだけ。いろいろな国を周遊しても料金はそのまま。渡航前の設定もできる便利な海外Wi-Fiです。">
 		<meta name="keywords" content="jetfi,海外,wifi,ルータ,レンタル,高速,大容量">
 		<meta name="MobileOptimized" content="width">
@@ -57,26 +57,19 @@
 			<section class="area_content">
 				<div class="choosed_area clearfix">
 					<p class="left_p">選択中のプラン</p>
-					<p class="area_title">“　アジア周遊　”プラン</p>
+					<p class="area_title">“　中国通常　”プラン</p>
 				</div>
 				<h3 class="top_title"><span class="img_default">1日の高速通信容量を選択する</span></h3>
+				<div class="sub_title_content">
+					<h4><span>単国プラン（容量無制限）</span></h4>
+					<p>１カ国しか行く予定がない場合は「単国プラン」！</p>
+				</div>
 				<ul class="capacity_content">
-					<li>
-						<a href="#">
-							<p class="capacity_img capacity_01 img_default">
-								とにかく安く利用したい
-								<span>“ 350MB ”</span>
-							</p>
-							<p class="price">680円/日</p>
-						</a>
-					</li>
 					<li>
 						<a href="#">
 							<div class="labels clearfix">
 								<p class="star img_default">オススメ</p>
-								<p class="hot">人気国</p>
 							</div>
-							<!-- <p class="star"><span class="img_default">オススメ</span></p> -->
 							<p class="capacity_img capacity_02 img_default">
 								たっぷりお得に利用したい
 								<span>“ 500MB ”</span>
@@ -84,15 +77,9 @@
 							<p class="price">980円/日</p>
 						</a>
 					</li>
-					<li>
-						<a href="#">
-							<p class="capacity_img capacity_03 img_default">
-								仕事利用や友達との<br>シェア利用に
-								<span>“ 1GB ”</span>
-							</p>
-							<p class="price">1,280円/日</p>
-						</a>
-					</li>
+				</ul>
+				<ul class="note">
+					<li><p>※「中国プレミアム」プランは、”500MB”のみのご提供となっております。</p></li>
 				</ul>
 				<div class="sub_title_content data_flow">
 					<h4><span class="img_default">データ通信量の目安</span></h4>
