--- a/jetfi_wifi_jp/index.html
+++ b/jetfi_wifi_jp/index.html
@@ -16,7 +16,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,700i" rel="stylesheet">
 	</head>
 	<body>
-		<!--fix-header-->   
+		<!--header-->   
 		<header class="header_container">
 		    <div class="logo-area clearfix">
 		      	<a href="#" class="gnav-logo">
