補按鈕，微調其他小地方

--- a/jetfi_wifi_jp/asia.html
+++ b/jetfi_wifi_jp/asia.html
@@ -239,6 +239,9 @@
 				   		</a>
 			   		</li>
 			   	</ul> 
+			   	<p class="btn_more">
+			   		<a class="img_default" href="#">その他　単国プラン</a>
+			   	</p>
 			</section>
 		</main>
 		<!--footer-->
