--- a/jetfi_wifi_jp/asia_01.html
+++ b/jetfi_wifi_jp/asia_01.html
@@ -74,9 +74,8 @@
 						<a href="#">
 							<div class="labels clearfix">
 								<p class="star img_default">オススメ</p>
-								<p class="hot">人気国</p>
+								<!-- <p class="hot">人気国</p> -->
 							</div>
-							<!-- <p class="star"><span class="img_default">オススメ</span></p> -->
 							<p class="capacity_img capacity_02 img_default">
 								たっぷりお得に利用したい
 								<span>“ 500MB ”</span>
