--- a/jetfi_wifi_jp/asia_03.html
+++ b/jetfi_wifi_jp/asia_03.html
@@ -65,7 +65,7 @@
 					<p>１カ国しか行く予定がない場合は「単国プラン」！</p>
 				</div>
 				<ul class="capacity_content">
-					<li>
+					<li class="main_unlimited">
 						<a href="#">
 							<div class="labels clearfix">
 								<p class="star img_default">オススメ</p>
