--- a/Richtek2/index.html
+++ b/Richtek2/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>特約商店享好康</title>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name='description' content=""/>
 		<meta name='keywords' content=""/>
 		<meta name="MobileOptimized" content="width">
@@ -10,12 +11,33 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<link rel="stylesheet" href="css/style.css">
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="jvmobilemenu/jv-jquery-mobile-menu.css">
+		<script type="text/javascript">
+			$(function(){
+			   	$('.gotop').click(function(){ $('html,body').stop(true,false).animate({scrollTop:0}, 800); });
+				return false;
+			});
+		</script>
 	</head>
-	<body>
+	<body class="page">
+	    <div class="mobile-nav" id="sideMenu">
+	    	<h3>選單</h3>
+	        <ul class="Oneself">
+	            <li><p><a class="icon_01" href="food.html">美食餐飲</a></p></li>
+	            <li><p><a class="icon_02" href="hotel.html">飯店住宿</a></p></li>
+	            <li><p><a class="icon_03" href="entertainment.html">休閒娛樂</a></p></li>
+	            <li><p><a class="icon_04" href="education.html">教育文化</a></p></li>
+	            <li><p><a class="icon_05" href="other.html">其他類別</a></p></li>
+	        </ul>
+	    </div>
+	    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/TweenMax.min.js"></script>
+	    <script src="jvmobilemenu/jv-jquery-mobile-menu-min.js"></script>
+	    <script src="jvmobilemenu/script-right.js"></script>
+
 		<header class="headerBox">
 			<section class="contentsBox clearfix">
-				<a class="logo img_default" href="#"></a>
-				<a class="home img_default" href="#"></a>
+				<a class="logo img_default" href="index.html"></a>
+				<a class="home img_default" href="index.html"></a>
 			</section>
 		</header>
 		<main class="mainBox">
@@ -53,7 +75,7 @@
 						<li>
 							<a class="clearfix" href="#">
 								<p class="type">新特約!</p>
-								<p class="new_title">美食餐飲類-糊同-胡同燒肉台南11號店</p>
+								<p class="new_title">美食餐飲類-糊同-胡同燒肉台南11號店休閒娛樂類-御手國醫優惠券(全台分店適用)</p>
 							</a>
 						</li>
 						<li>
@@ -71,7 +93,7 @@
 						<li>
 							<a class="clearfix" href="#">
 								<p class="type">新特約!</p>
-								<p class="new_title">休閒娛樂類-御手國醫優惠券(全台分店適用)</p>
+								<p class="new_title">休閒娛樂類-御手國醫優惠券(全台分店適用)休閒娛樂類-御手國醫優惠券(全台分店適用)休閒娛樂類-御手國醫優惠券(全台分店適用)休閒娛樂類-御手國醫優惠券(全台分店適用)休閒娛樂類-御手國醫優惠券(全台分店適用)</p>
 							</a>
 						</li>
 					</ul>
@@ -92,7 +114,7 @@
 		<footer class="footerBox clearfix">
 			<section class="contentsBox clearfix">
 				<a class="logo img_default"></a>
-				<a class="top"><span class="img_default"></span></a>
+				<a class="top gotop"><span class="img_default"></span></a>
 				<p class="copyright">Copyright © 2020 Richtek Technology Corporation. All Rights Reserved.</p>
 			</section>
 		</footer>
