--- a/iiot/app_web/shop- takeapart/index.html
+++ b/iiot/app_web/shop- takeapart/index.html
@@ -45,6 +45,17 @@
 	</script>
 </head>
 <body>
+	<!-- <div class="explanation_contents">
+		<div class="explanation_middle">
+			<div class="ex_photo">
+				<p class="ex1">左滑看其他分類</p>
+				<p class="ex2">下滑看<br>更多商品</p>
+				<p class="ex3">左右滑切換分類</p>
+				<img src="images/ex_img.png" width="100%">
+			</div>
+			<p class="btn"><a class="btn c_org" href="#">知道了</a></p>
+		</div>
+	</div> -->
 	<main class="shop_mainbox">
 		<section class="top_banner"><!-- 未來如果有banner的話 -->
 			<img src="images/b_33_h_b_w_20190304_154829_9339e.png" width="100%" alt="">
@@ -105,7 +116,7 @@
 			                    </div>
 							</div>
 						</li>
-						<li class="the_selected clearfix">
+						<li class="the_selected  clearfix"><!-- no_photo -->
 							<p class="buy_nb">5</p>
 							<div class="photo" style="background-image: url(http://likea.ezvivi.com/manage/0/product/199868/F_m.jpg);"></div>
 							<div class="product_info">
@@ -113,8 +124,8 @@
 								<h4 class="sub_info">針對商品描述的描述針對商品描述的描述</h4>
 								<p class="money">$129</p>
 								<div class="btn_buy clearfix">
-			                        <!-- <button class="btn_order" href="#food_items"  rel="modal:open">選購商品</button> -->
-			                        <p class="btn_order"><a class="btn c_org" href="#food_items"  rel="modal:open">選購商品</a></p>
+			                        <button class="btn_order" href="#food_items"  rel="modal:open">選購商品</button>
+			                        <!-- <p class="btn_order"><a class="btn c_org" href="#food_items"  rel="modal:open">選購商品</a></p> -->
 			                        <p class="product_inventory">剩餘數量：2</p>
 			                    </div>
 							</div>
