新增說明圖的部分

--- a/iiot/app_web/shop- takeapart/index.html
+++ b/iiot/app_web/shop- takeapart/index.html
@@ -45,22 +45,65 @@
 	</script>
 </head>
 <body>
-	<!-- <div class="explanation_contents">
+	<div class="explanation_contents">
 		<div class="explanation_middle">
 			<div class="ex_photo">
-				<p class="ex1">左滑看其他分類</p>
-				<p class="ex2">下滑看<br>更多商品</p>
-				<p class="ex3">左右滑切換分類</p>
+				<div class="ex ex1">
+					<p>左滑看其他分類</p>
+					<div class="arr_go_right">
+						<div class="dots">
+						  <div></div>
+						  <div></div>
+						  <div></div>
+						</div>
+					</div>
+				</div>
+				<div class="ex ex2">
+					<div class="arr_go_top">
+						<div class="dots">
+						  <div></div>
+						  <div></div>
+						  <div></div>
+						</div>
+					</div>
+					<p>上滑看<br>更多商品</p>
+				</div>
+				<div class="ex ex3">
+					<div class="arr_go_left">
+						<div class="dots">
+						  <div></div>
+						  <div></div>
+						  <div></div>
+						</div>
+					</div>
+					<p>左右滑切換分類</p>
+					<div class="arr_go_right">
+						<div class="dots">
+						  <div></div>
+						  <div></div>
+						  <div></div>
+						</div>
+					</div>
+				</div>
 				<img src="images/ex_img.png" width="100%">
 			</div>
-			<p class="btn"><a class="btn c_org" href="#">知道了</a></p>
+			<div class="the_button">
+				<a class="btn c_org" href="#">知道了</a>
+			</div>
 		</div>
-	</div> -->
+	</div>
 	<main class="shop_mainbox">
 		<section class="top_banner"><!-- 未來如果有banner的話 -->
 			<img src="images/b_33_h_b_w_20190304_154829_9339e.png" width="100%" alt="">
 		</section>
 		<section class="top_menu_box">
+			<div class="arr_go_right">
+				<div class="dots">
+				  <div></div>
+				  <div></div>
+				  <div></div>
+				</div>
+			</div>
 			<!-- Swiper -->
 		  <div class="swiper-container">
 		    <div class="swiper-wrapper">
