--- a/iiot/app_web/shop- takeapart/shoppingcart_01.html
+++ b/iiot/app_web/shop- takeapart/shoppingcart_01.html
@@ -201,7 +201,7 @@
 					<a href="#phone_code" rel="modal:open">
 					<div class="btn time_choosed clearfix">
 						<p class="l_p">取餐時間</p>
-						<p class="r_p">立即（<span class="f_red">約20分鐘</span>）<i class="fas fa-chevron-down"></i></p>
+						<p class="r_p">今天03-31 立即（<span class="f_red">約20分鐘</span>）<i class="fas fa-chevron-down"></i></p>
 					</div>
 					</a>
 					<!-- 未選擇時間 提醒 + error_tips -->
