--- a/iiot/app_web/shop- takeapart/shoppingcart_02.html
+++ b/iiot/app_web/shop- takeapart/shoppingcart_02.html
@@ -175,6 +175,12 @@
 								<p class="s_f_g">(最多 200 個字元)</p>
 							</div>
 						</li>
+						<li>
+							<div class="the_checkbox">
+								<input id="" type="checkbox" name="field" value="option" checked="">
+								<label for="">索取收據</label>
+							</div>
+						</li>
 						<li class="the_invoice">
 							<h4><span class="org">*</span>開立統一編號/收據</h4>
 							<div>
