--- a/jetfi_wifi_jp/europe.html
+++ b/jetfi_wifi_jp/europe.html
@@ -44,7 +44,7 @@
 				</div>
 			</section>
 			<section class="area_content">
-				<h3 class="top_title"><span class="img_default">エリアを選択する</span></h3>
+				<h3 class="top_title"><span class="img_default">プランを選択する</span></h3>
 				<div class="sub_title_content">
 					<h4><span>周遊プラン</span></h4>
 					<p>2カ国以上渡航予定の方は「周遊プラン」！</p>
@@ -76,7 +76,7 @@
 					</div>
 				</div>
 				<div class="sub_title_content">
-					<h4><span>単国プラン（容量無制限）</span></h4>
+					<h4><span>単国プラン（大容量 目安: 5GB/日）</span></h4>
 					<p>１カ国しか行く予定がない場合は「単国プラン」！<br>
 						<span>※「単国プラン」がない国もあります。その場合は「周遊プラン」を選択ください</span>
 					</p>
