--- a/jetfi_wifi_jp/asia.html
+++ b/jetfi_wifi_jp/asia.html
@@ -10,7 +10,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="css/wifi-style.css">
 		<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
-		<link rel="icon" href="https://www.jetfi.jp/wifi/images/favicon.ico">
+		<link rel="icon" href="https://www.jetfi.jp/template/default/img/common/favicon-32x32.png">
 		<link rel="apple-touch-icon" href="https://www.jetfi.jp/wifi/images/apple-touch-icon.png">
 		<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:300,400,500,700,900" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,700i" rel="stylesheet">
@@ -37,7 +37,7 @@
 				</div>
 			</section>
 			<section class="area_content">
-				<h3 class="top_title"><span class="img_default">エリアを選択する</span></h3>
+				<h3 class="top_title"><span class="img_default">プランを選択する</span></h3>
 				<div class="sub_title_content">
 					<h4><span>周遊プラン</span></h4>
 					<p>2カ国以上渡航予定の方は「周遊プラン」！</p>
@@ -72,7 +72,7 @@
 					</div>
 				</div>
 				<div class="sub_title_content">
-					<h4><span>単国プラン（容量無制限）</span></h4>
+					<h4><span>単国プラン（大容量 目安: 5GB/日）</span></h4>
 					<p>１カ国しか行く予定がない場合は「単国プラン」！<br>
 						<span>※「単国プラン」がない国もあります。その場合は「周遊プラン」を選択ください</span>
 					</p>
