--- a/jetfi_wifi_jp/index.html
+++ b/jetfi_wifi_jp/index.html
@@ -10,7 +10,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="css/wifi-style.css">
 		<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
-		<link rel="icon" href="https://www.jetfi.jp/wifi/images/favicon.ico">
+		<link rel="icon" href="https://www.jetfi.jp/template/default/img/common/favicon-32x32.png">
 		<link rel="apple-touch-icon" href="https://www.jetfi.jp/wifi/images/apple-touch-icon.png">
 		<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:300,400,500,700,900" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,700i" rel="stylesheet">
@@ -36,7 +36,7 @@
 				</div>
 			</section>
 			<section class="area_content">
-				<h3 class="top_title"><span class="img_default">エリアを選択する</span></h3>
+				<h3 class="top_title"><span class="img_default">プランを選択する</span></h3>
 			   	<ul class="area_list clearfix">
 			   		<li>
 			   			<a href="asia.html">
