jetfi wifi jp - 調整畫面與新增 html style

--- a/jetfi_wifi_jp/asia_02.html
+++ b/jetfi_wifi_jp/asia_02.html
@@ -61,7 +61,7 @@
 				</div>
 				<h3 class="top_title"><span class="img_default">1日の高速通信容量を選択する</span></h3>
 				<div class="sub_title_content">
-					<h4><span>単国プラン（容量無制限）</span></h4>
+					<h4><span>単国プラン</span></h4>
 					<p>１カ国しか行く予定がない場合は「単国プラン」！</p>
 				</div>
 				<ul class="capacity_content">
