--- a/jetfi_wifi_jp/asia.html
+++ b/jetfi_wifi_jp/asia.html
@@ -38,10 +38,18 @@
 			</section>
 			<section class="area_content">
 				<h3 class="top_title"><span class="img_default">プランを選択する</span></h3>
-				<div class="sub_title_content">
+				<!-- new -->
+				<div style="max-width: 1070px; margin: 20px auto 10px auto;">
+					<div style=" width: 100%; text-align: center; background: url(images/bg_line_yellow.gif) center center repeat-x; padding: 0 20px;">
+						<h4 style="font-size: 21px; font-weight: 600; background-color: #fff; padding: 5px 15px; min-width: 200px; display: inline-block;">周遊プラン</h4>
+					</div>
+					<p style=" font-size: 15px; padding: 10px 15px 18px 15px; text-align: center;">2カ国以上渡航予定の方は「周遊プラン」！</p>
+				</div>
+				<!-- old -->
+				<!-- <div class="sub_title_content">
 					<h4><span>周遊プラン</span></h4>
 					<p>2カ国以上渡航予定の方は「周遊プラン」！</p>
-				</div>
+				</div> -->
 				<div class="travel_plan_content clearfix">
 					<div class="plan_info">
 						<div class="clearfix" style="text-align: left;">
@@ -71,12 +79,23 @@
 						<div class="the_photo photo_05" style="background-image: url(images/area-photo/india.jpg);"></div>
 					</div>
 				</div>
-				<div class="sub_title_content">
+				<!-- new -->
+				<div style="max-width: 1070px; margin: 20px auto 10px auto;">
+					<div style=" width: 100%; text-align: center; background: url(images/bg_line_yellow.gif) center center repeat-x; padding: 0 20px;">
+						<h4 style="font-size: 21px; font-weight: 600; background-color: #fff; padding: 5px 15px; min-width: 220px; display: inline-block;">単国プラン（大容量 目安: 5GB/日）</h4>
+					</div>
+					<p style=" font-size: 15px; padding: 10px 15px 18px 15px; text-align: center;">
+						１カ国しか行く予定がない場合は「単国プラン」！<br>
+						<span style=" font-size: 11.5px; padding-top: 12px; display: inline-block; font-weight: 400;">※「単国プラン」がない国もあります。その場合は「周遊プラン」を選択ください</span> <!-- 這行無法置左 -->
+					</p>
+				</div>
+				<!-- old -->
+				<!-- <div class="sub_title_content">
 					<h4><span>単国プラン（大容量 目安: 5GB/日）</span></h4>
 					<p>１カ国しか行く予定がない場合は「単国プラン」！<br>
 						<span>※「単国プラン」がない国もあります。その場合は「周遊プラン」を選択ください</span>
 					</p>
-				</div>
+				</div> -->
 			   	<ul class="area_list clearfix">
 			   		<li>
 			   			<a href="asia_00.html">
