--- a/jetfi_wifi_jp/index.html
+++ b/jetfi_wifi_jp/index.html
@@ -36,7 +36,7 @@
 				</div>
 			</section>
 			<section class="area_content">
-				<h3 class="top_title"><span class="img_default">プランを選択する</span></h3>
+				<h3 class="top_title"><span class="img_default">エリアを選択する</span></h3>
 			   	<ul class="area_list clearfix">
 			   		<li>
 			   			<a href="asia.html">
