讓視覺上 capacity_img 相等，調整 html 異動

--- a/jetfi_wifi_jp/asia_01.html
+++ b/jetfi_wifi_jp/asia_01.html
@@ -64,10 +64,10 @@
 					<li>
 						<a href="#">
 							<p class="capacity_img capacity_01 img_default">
-								とにかく安く利用したい
-								<span>“ 350MB ”</span>
+								<span class="top_sub_title">とにかく安く利用したい</span>
+								<span class="main_title">“ ヨーロッパ周遊”プラン 350MB ”</span>
 							</p>
-							<p class="price">680円/日</p>
+							<p class="price">580円/日</p>
 						</a>
 					</li>
 					<li>
@@ -77,19 +77,19 @@
 								<!-- <p class="hot">人気国</p> -->
 							</div>
 							<p class="capacity_img capacity_02 img_default">
-								たっぷりお得に利用したい
-								<span>“ 500MB ”</span>
+								<span class="top_sub_title">たっぷりお得に利用したい</span>
+								<span class="main_title">“ ヨーロッパ周遊”プラン 500MB ”</span>
 							</p>
-							<p class="price">980円/日</p>
+							<p class="price">680円/日</p>
 						</a>
 					</li>
 					<li>
 						<a href="#">
 							<p class="capacity_img capacity_03 img_default">
-								仕事利用や友達との<br>シェア利用に
-								<span>“ 1GB ”</span>
+								<span class="top_sub_title">仕事利用や友達とのシェア利用に</span>
+								<span class="main_title">“ ヨーロッパ周遊”プラン 1GB ”</span>
 							</p>
-							<p class="price">1,280円/日</p>
+							<p class="price">1,580円/日</p>
 						</a>
 					</li>
 				</ul>
