--- a/jetfi_wifi_jp/asia_02.html
+++ b/jetfi_wifi_jp/asia_02.html
@@ -71,9 +71,8 @@
 								<p class="star img_default">オススメ</p>
 							</div>
 							<p class="capacity_img capacity_00 img_default">
-								容量を気にせず<br>
-								たっぷり使いたい
-								<span>“ 無制限 ”</span>
+								<span class="top_sub_title">容量を気にせずたっぷり使いたい</span>
+								<span class="main_title">“ 無制限 ”</span>
 							</p>
 							<p class="price">1,580円/日</p>
 						</a>
@@ -87,8 +86,8 @@
 					<li>
 						<a href="#">
 							<p class="capacity_img capacity_01 img_default">
-								とにかく安く利用したい
-								<span>“ 350MB ”</span>
+								<span class="top_sub_title">とにかく安く利用したい</span>
+								<span class="main_title">“ 350MB ”</span>
 							</p>
 							<p class="price">680円/日</p>
 						</a>
@@ -99,8 +98,8 @@
 								<p class="star img_default">オススメ</p>
 							</div>
 							<p class="capacity_img capacity_02 img_default">
-								たっぷりお得に利用したい
-								<span>“ 500MB ”</span>
+								<span class="top_sub_title">たっぷりお得に利用したい</span>
+								<span class="main_title">“ 500MB ”</span>
 							</p>
 							<p class="price">980円/日</p>
 						</a>
@@ -108,8 +107,8 @@
 					<li>
 						<a href="#">
 							<p class="capacity_img capacity_03 img_default">
-								仕事利用や友達との<br>シェア利用に
-								<span>“ 1GB ”</span>
+								<span class="top_sub_title">仕事利用や友達とのシェア利用に</span>
+								<span class="main_title">“ 1GB ”</span>
 							</p>
 							<p class="price">1,280円/日</p>
 						</a>
@@ -121,7 +120,7 @@
 					<li class="no_subtitle">
 						<a href="#">
 							<p class="capacity_img capacity_01 img_default">
-								<span>“ グローバル<br>350MB ”</span>
+								<span class="main_title">“ グローバル<br>350MB ”</span>
 							</p>
 							<p class="price">680円/日</p>
 						</a>
@@ -130,7 +129,7 @@
 					<li class="no_subtitle">
 						<a href="#">
 							<p class="capacity_img capacity_02 img_default">
-								<span>“ グローバル<br> 500MB ”</span>
+								<span class="main_title">“ グローバル<br> 500MB ”</span>
 							</p>
 							<p class="price">980円/日</p>
 						</a>
@@ -139,7 +138,7 @@
 					<li class="no_subtitle">
 						<a href="#">
 							<p class="capacity_img capacity_03 img_default">
-								<span>“ グローバル<br>1GB ”</span>
+								<span class="main_title">“ グローバル<br>1GB ”</span>
 							</p>
 							<p class="price">1,280円/日</p>
 						</a>
