--- a/jetfi_wifi_jp/asia_03.html
+++ b/jetfi_wifi_jp/asia_03.html
@@ -71,8 +71,8 @@
 								<p class="star img_default">オススメ</p>
 							</div>
 							<p class="capacity_img capacity_02 img_default">
-								たっぷりお得に利用したい
-								<span>“ 500MB ”</span>
+								<span class="top_sub_title">たっぷりお得に利用したい</span>
+								<span class="main_title">“ 500MB ”</span>
 							</p>
 							<p class="price">980円/日</p>
 						</a>
